[package]
name = "timeseries-fingerprint"
version = "0.1.0"
authors = ["Nils Krüger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19" }
itertools = "0.9.0"
plotters = "0.3.0"
rand = "0.7.3"
